# temp-mail-detector-sdk-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/tempmail_pyzit/: __init__.py  _http.py  async_client.py  client.py  exceptions.py  models.py
tests/: conftest.py  fixtures.py  test_async_client.py  test_client.py  test_exceptions.py  test_models.py
